--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "build": "echo 'No build step required'",
     "test": "node scb-api-test.js",
     "test-categories": "node -e \"require('./scb-api-test.js').testCategories()\"",
     "test-help": "node -e \"require('./scb-api-test.js').testHelp()\""
